# Cpp-SDL2-Game

./: .gitignore  CMakeLists.txt  README.md  Tools.hpp  imgui_sdl.cpp  imgui_sdl.h  linkLibs.py  uLevel.cdata  uLevel.ddata  uLevel.kdata  uLevel.mdata  uLevel.sdata
Engine/: Button.cpp  Button.hpp  Camera.cpp  Camera.hpp  Component.hpp  Engine.cpp  Engine.hpp  Entity.cpp  Entity.hpp  InputManager.cpp  InputManager.hpp  Singleton.hpp  UI.cpp  UI.hpp  Vector2.cpp  Vector2.hpp
Game/: Background.cpp  Background.hpp  Level.cpp  Level.hpp
Game/Components/: AnimatedRenderer.cpp  AnimatedRenderer.hpp  Collider.cpp  Collider.hpp  DoorManager.cpp  DoorManager.hpp  Editor.cpp  Editor.hpp  ImageRenderer.cpp  ImageRenderer.hpp  MainMenu.cpp  MainMenu.hpp  PlayerController.cpp  PlayerController.hpp
Game/Components/LevelEditor/: EditorMode.hpp  LevelEditor.cpp  LevelEditor.hpp
Game/Components/LevelEditor/Modes/: ColliderTool.cpp  ColliderTool.hpp  CreationTool.cpp  CreationTool.hpp  CustomImagePlacer.cpp  CustomImagePlacer.hpp  DoorTool.cpp  DoorTool.hpp  EraserTool.cpp  EraserTool.hpp  KeyTool.cpp  KeyTool.hpp  PickerTool.cpp  PickerTool.hpp  SelectionTool.cpp  SelectionTool.hpp  SpikeTool.cpp  SpikeTool.hpp  SwitchTool.cpp  SwitchTool.hpp
Game/Entities/: Door.cpp  Door.hpp  GameManager.cpp  GameManager.hpp  Key.cpp  Key.hpp  Player.cpp  Player.hpp  Spike.cpp  Spike.hpp  Switch.cpp  Switch.hpp  TutKey.cpp  TutKey.hpp
Tutorial/: map.cdata  map.ddata  map.kdata  map.mdata  map.sdata  map.zdata
